Fixed `.years ul` alignment by removing left padding

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,6 +46,10 @@ body {
     max-width: 800px;
 }
 
+.years ul {
+    padding: 0;
+}
+
 .years ul a {
     color: #008F0D;
     text-decoration: none;
